--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 <div id="wrap">
     <div id="hero-black">
-    <h2 class="heading">The background of the space image</h2>
+    <h2 class="heading"></h2>
     </div>
     <div id="hero-white">
         <h2 class="heading-h2">Welcome Jonas Hammarberg!</h2>
