--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br>To confirm the account and go to your space overview, click the button.  
         </h3>
         <div style="text-align: center;">
-        <button type="submit" class="inquiry-btn">Create your space</button>
+        <button type="submit" class="inquiry-btn"><a href="https://www.spce.com/"></a>Create your space</button>
         </div>
     </div>
 </div>
